Fixed alignment issues in WishList

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -101,4 +101,19 @@ body {
     text-align: center;
     margin-bottom: 20px;
     padding: 0px;
+    border-bottom: none;
+}
+.list-group-item {
+    text-align: center;
+}
+
+.list-group-item a {
+    font-size: 1.1rem;
+    font-weight: bold;
+}
+
+.list-group-item *{
+    width: 100%;
+    margin: 0px;
+    padding: auto auto;
 }
